PEH-223 Landscape layout for Metabolic Panel Table, include 'Enrollment Date' text, include measurement on the tables.

--- a/force-app/main/default/aura/VisitReportContainer/VisitReportContainer.cmp
+++ b/force-app/main/default/aura/VisitReportContainer/VisitReportContainer.cmp
@@ -111,7 +111,7 @@
                     <tr class="slds-hint-parent">
                         <aura:iteration items="{!rows}" var="row">
                             <td style="text-align: center">
-                                {!row.value}
+                                {!row.value + (empty(row.measurement) ? '' : ' (' + row.measurement + ')')}
                             </td>
                         </aura:iteration>
                     </tr>
