--- a/force-app/main/default/aura/ResourceDashboardCardItem/ResourceDashboardCardItem.css
+++ b/force-app/main/default/aura/ResourceDashboardCardItem/ResourceDashboardCardItem.css
@@ -1,6 +1,8 @@
 .THIS.resource-container {
+    min-height: 293px;
     width: 247px;
     margin: auto;
+    position: relative;
 }
 
 .THIS .resource-title {
