--- a/force-app/main/default/aura/VisitReportContainer/VisitReportContainer.cmp
+++ b/force-app/main/default/aura/VisitReportContainer/VisitReportContainer.cmp
@@ -80,27 +80,16 @@
 
     <!--                                          REPORTS                                               -->
 
-    <!--    <aura:if isTrue="{!v.isReportData}">-->
     <div style="position: relative; margin: 20px; display: none" id="content">
-<!--    <div style="position: relative; margin: 20px" id="content">-->
-
         <aura:iteration items="{!v.reportData.dataTables}" var="tableReport" indexVar="ind">
-            <div style="text-align: center; font-size:26px; margin-top: 40px; font-weight: bold">{!tableReport.tableName}</div>
-
-            <div style="margin: 15px">
-                {!tableReport.textResult}
-            </div>
-
-
-            <table class="slds-table slds-table--bordered" id="{!'tbl' + ind}" border="2">
+            <table id="{!'tbl' + ind}" border="2" style="background-color: white">
                 <thead>
-                <tr class="slds-text-heading--label">
+                <tr>
                     <aura:iteration items="{!tableReport.tHead}" var="tableHead">
-                        <th style="text-align: center">
-                           <span> {!tableHead.value} </span>
+                        <th style="text-align: center;">
+                           <div style="text-transform: none; font-size: 8px; display: block"> {!tableHead.value} </div>
                             <aura:if isTrue="{!tableHead.isShowRange}">
-                                <br/>
-                                <span style="text-transform: none; font-size:4px; display: block;"> {!' Expected Range ' + tableHead.minValue + ' - ' + tableHead.maxValue}</span>
+                                <div style="text-transform: none; font-size:4px; font-weight: normal"> {!'\n ' + $Label.c.Report_Expected_Range + ' ' + tableHead.minValue + ' - ' + tableHead.maxValue}</div>
                             </aura:if>
                         </th>
                     </aura:iteration>
@@ -108,7 +97,7 @@
                 </thead>
                 <tbody>
                 <aura:iteration items="{!tableReport.visitResultsWrapper}" var="rows">
-                    <tr class="slds-hint-parent">
+                    <tr>
                         <aura:iteration items="{!rows}" var="row">
                             <td style="text-align: center">
                                 {!row.value + (empty(row.measurement) ? '' : ' (' + row.measurement + ')')}
