--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
@@ -45,20 +45,10 @@
 }
 
 .THIS .visit-result-item-description {
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    background-color: #999999;
-    font-size: 12px;
     position: absolute;
     top: 0;
     right: 0;
-    text-align: center;
-    margin: 5px;
-    line-height: 16px;
-    color: white;
-    font-family: "Coursera New";
-    cursor: pointer;
+    margin: 0 5px;
 }
 
 .THIS .hidden {
