--- a/force-app/main/default/aura/AccountSettings/AccountSettings.css
+++ b/force-app/main/default/aura/AccountSettings/AccountSettings.css
@@ -123,3 +123,11 @@
     padding: 12px;
     margin-top: 20px;
 }
+
+.THIS .opt-in-popup-button {
+    width: 130px;
+}
+
+.THIS .opt-in-popup-button+.opt-in-popup-button {
+    margin-left: 30px;
+}
