--- a/force-app/main/default/aura/VisitResultsContainer/VisitResultsContainer.cmp
+++ b/force-app/main/default/aura/VisitResultsContainer/VisitResultsContainer.cmp
@@ -10,11 +10,13 @@
     <aura:attribute name="initData" type="VisitResultsRemote.InitDataWrapper" access="private"/>
     <aura:attribute name="initialized" type="Boolean" access="private" default="false"/>
     <aura:attribute name="labResultModeVitals" type="String" access="private" default="Vitals"/>
+    <aura:attribute name="optInChanged" type="Boolean" default="false" access="private"/>
 
     <!-- HANDLERS -->
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="change" value="{!v.labResultsMode}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.optInChanged}" action="{!c.doInit}"/>
 
     <!-- COMPONENT BODY -->
 
@@ -38,6 +40,7 @@
                 <aura:set attribute="else">
                     <c:VisitsCompliance contactId="{!v.initData.contact.Id}"
                                         isOptIn="{!v.initData.contact.Visit_Results_Opt_In__c}"
+                                        optInChanged="{!v.optInChanged}"
                                         isVisitResultsExist="{!v.initData.isResultsExist}"
                                         isVisitResultsAvailable="{!v.initData.isVisitResultsAvailable}"
                     />
