Batch for visits

--- a/force-app/main/default/layouts/Integration_VisitResult__c-Integration VisitResult Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_VisitResult__c-Integration VisitResult Layout.layout-meta.xml
@@ -74,6 +74,10 @@
                 <behavior>Edit</behavior>
                 <field>Work_Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Processed__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
