Fixed bugs in Visit Configuration component.

--- a/force-app/main/default/aura/CustomModal/CustomModal.cmp
+++ b/force-app/main/default/aura/CustomModal/CustomModal.cmp
@@ -20,7 +20,7 @@
                     <header class="slds-modal__header slds-modal__header_empty">
                         <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
                                 title="Close">
-                            <lightning:buttonIcon iconName="utility:close"/>
+                            <lightning:buttonIcon iconName="utility:close" onclick="{!c.hide}"/>
                         </button>
                     </header>
                     <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
