--- a/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
+++ b/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
@@ -1,7 +1,7 @@
 <!--
   - Created by Yehor Dobrovolskyi
  -->
-<aura:component implements="flexipage:availableForAllPageTypes" description="IconPlanetVisitInfoEdit"
+<aura:component implements="flexipage:availableForAllPageTypes,c:Modalable" description="IconPlanetVisitInfoEdit"
                 extends="c:LightningService"
                 controller="IconPlanetVisitInfoEditRemote">
     <aura:attribute name="iconDetails" type="Object[]"/>
@@ -11,11 +11,15 @@
     <aura:attribute name="IconsPackageFIlePath" default="/icons.svg" type="String"/>
     <aura:attribute name="iconsURL" type="String"/>
     <aura:attribute name="error" type="String"/>
+    <aura:attribute name="visitPlanId" type="String"/>
     <!--ATTRIBUTES-->
     <lightning:notificationsLibrary aura:id="notifLib"/>
 
+
+  <!--  <aura:method name="save" action="{!c.saveLegend}"/>
+    <aura:method name="close" action="{!c.closeLegend}"/>-->
     <!--SPINNER-->
-    <lightning:spinner aura:Id="spinner" size="medium"/>
+ <!--   <lightning:spinner aura:Id="spinner" size="medium"/>-->
     <!--SPINNER-->
     <lightning:card>
         <!-- ICONS TABLE -->
@@ -56,12 +60,12 @@
 
         <!-- ICONS TABLE -->
         <!-- ICONS FOOTER -->
-        <aura:set attribute="actions">
+     <!--   <aura:set attribute="actions">
             <aura:if isTrue="{!and(empty(v.iconDetails)==false,empty(v.error))}">
                 <lightning:button variant="brand" type="button" name="save" label="Save"
                                   onclick="{!c.saveIconsLegend}"/>
             </aura:if>
-        </aura:set>
+        </aura:set>-->
         <!-- ICONS FOOTER -->
     </lightning:card>
 </aura:component>
