--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
@@ -41,10 +41,15 @@
                 </lightning:layoutItem>
                 <lightning:layoutItem>
                     <aura:if isTrue="{!v.visitPlanId!=null}">
-                        <lightning:button disabled="{!empty(v.error)==false}" onclick="{!c.addVisit}" class="slds-theme_neutral" variant="neutral"
+                        <lightning:button disabled="{!empty(v.error)==false}" onclick="{!c.editVisitLegend}"
+                                          class="slds-theme_neutral" variant="neutral"
+                                          label="{!$Label.c.Edit_Visit_Legend}"/>
+                        <lightning:button disabled="{!empty(v.error)==false}" onclick="{!c.addVisit}"
+                                          class="slds-theme_neutral" variant="neutral"
                                           label="{!$Label.c.Visit_b_Add_Visit}"/>
                         <aura:set attribute="else">
-                            <lightning:button disabled="{!empty(v.error)==false}" onclick="{!c.createVisitplan}" class="slds-theme_neutral"
+                            <lightning:button disabled="{!empty(v.error)==false}" onclick="{!c.createVisitplan}"
+                                              class="slds-theme_neutral"
                                               variant="neutral"
                                               label="{!$Label.c.Visit_b_Create_Visit_Plan}"/>
                         </aura:set>
@@ -129,11 +134,13 @@
                     </lightning:layoutItem>
                     <lightning:layoutItem class="schevrons sticky-Position" size="2">
                         <div class="schevron">
-                            <lightning:buttonIcon disabled="{!empty(v.selectedIcons)}" size="medium" onclick="{!c.shiftLeft}"
+                            <lightning:buttonIcon disabled="{!empty(v.selectedIcons)}" size="medium"
+                                                  onclick="{!c.shiftLeft}"
                                                   iconName="utility:chevronleft"/>
                         </div>
                         <div class="schevron">
-                            <lightning:buttonIcon disabled="{!empty(v.availableIcons)}" size="medium" onclick="{!c.shiftRight}"
+                            <lightning:buttonIcon disabled="{!empty(v.availableIcons)}" size="medium"
+                                                  onclick="{!c.shiftRight}"
                                                   iconName="utility:chevronright"/>
                         </div>
                     </lightning:layoutItem>
@@ -175,11 +182,18 @@
         <aura:set attribute="footer">
             {!null}
         </aura:set>
-
     </c:CustomModal>
     <c:IconsStaticResourceService aura:id="iconsStaticResourceService"
                                   staticResourceName="Icons_legend"
                                   IconsPackageFIlePath="/icons.svg"/>
 
-  <!--  <c:IconPlanetVisitInfoEdit iconsURL="{!v.iconsURL}" visitPlanId='{!v.visitPlanId}' aura:id="iconEdit"/>-->
+    <c:CustomModal aura:Id='editLegend' size="medium">
+        <c:IconPlanetVisitInfoEdit  aura:Id='legend' visitPlanId="{!v.visitPlanId}"/>
+        <aura:set attribute="footer">
+            <lightning:button variant="neutral" type="button" name="close" label="{!$Label.c.Visit_b_Close}"
+                              onclick="{!c.closeLegend}"/>
+            <lightning:button variant="brand" type="button" name="save" label="{!$Label.c.Visit_b_Save}"
+                              onclick="{!c.saveLegend}"/>
+        </aura:set>
+    </c:CustomModal>
 </aura:component>
