--- a/force-app/main/default/aura/ReferringClinicEnrollmentItem/ReferringClinicEnrollmentItem.cmp
+++ b/force-app/main/default/aura/ReferringClinicEnrollmentItem/ReferringClinicEnrollmentItem.cmp
@@ -18,7 +18,7 @@
         <div class="rcei-left slds-col slds-size_1-of-1 slds-medium-size_6-of-12 slds-large-size_6-of-12">
 
             <div class="rcei-info">
-                <div class="rcei-name">{!v.enrollmentData.enrollment.HCP_Contact__r.Salutation + ' ' + v.enrollmentData.enrollment.HCP_Contact__r.FirstName + ' ' + v.enrollmentData.enrollment.HCP_Contact__r.LastName}</div>
+                <div class="rcei-name">{!v.enrollmentData.enrollment.HCP_Contact__r.Salutation + ' ' + v.enrollmentData.enrollment.HCP_Contact__r.FirstName + ' ' + v.enrollmentData.enrollment.HCP_Contact__r.LastName + ' - ' + v.enrollmentData.enrollment.Study_Site__r.Name}</div>
 
                 <div class="{! 'rcei-status status-' + v.enrollmentData.status}">{!v.enrollmentData.statusLabel}</div>
             </div>
