--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.cmp
@@ -189,7 +189,7 @@
                                   IconsPackageFIlePath="/icons.svg"/>
 
     <c:CustomModal aura:Id='editLegend' size="medium">
-        <c:IconPlanetVisitInfoEdit aura:Id='legend' visitPlanId="{!v.visitPlanId}"/>
+        <c:IconPlanetVisitInfoEdit aura:Id='legend' ctpId="{!v.recordId}"/>
         <aura:set attribute="footer">
             <lightning:button variant="neutral" type="button" name="close" label="{!$Label.c.Visit_b_Close}"
                               onclick="{!c.closeLegend}"/>
