--- a/force-app/main/default/layouts/Visit__c-Visit Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit__c-Visit Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Edit</behavior>
                 <field>Visit_Number__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Patient_Portal_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
