--- a/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
+++ b/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
@@ -43,16 +43,16 @@
                     </tr>
                     <aura:iteration var="visitWrapper" items="{!v.currentVisits}">
                         <tr>
-                            <td class="sv-t-name">{!visitWrapper.name}</td>
-                            <td class="sv-t-time">{!visitWrapper.schedule}</td>
-                            <td class="{!visitWrapper.isAdhoc ? 'invisible' : 'sv-t-icons'}">
+                            <td class="sv-t-name">{!visitWrapper.visit.Visit__r.Patient_Portal_Name__c}</td>
+                            <td class="sv-t-time">{!visitWrapper.visit.Visit_Schedule__c}</td>
+                            <td class="{!visitWrapper.visit.Is_Adhoc__c ? 'invisible' : 'sv-t-icons'}">
                                 <c:RRIconSplitter numOfIconsToDisplay="5" class="svl-icon"
                                                   value="{!visitWrapper.icons}"/>
                             </td>
-                            <td class="{!visitWrapper.isAdhoc ? 'sv-t-icons' : 'invisible'}">{!$Label.c.StudyVisit_Unscheduled_Visit}</td>
-                            <td class="{!v.visitMode == v.visitModeCurrent ? 'sv-t-status' : 'invisible'}">{!visitWrapper.status}</td>
+                            <td class="{!visitWrapper.visit.Is_Adhoc__c ? 'sv-t-icons' : 'invisible'}">{!$Label.c.StudyVisit_Unscheduled_Visit}</td>
+                            <td class="{!v.visitMode == v.visitModeCurrent ? 'sv-t-status' : 'invisible'}">{!visitWrapper.visit.Status__c}</td>
                             <td class="{!v.visitMode == v.visitModeCurrent ? 'sv-t-reminder' : 'invisible'}"
-                                data-visit-id="{!visitWrapper.visitId}"
+                                data-visit-id="{!visitWrapper.visit.Id}"
                                 data-task-id="{!visitWrapper.task.Id}"
                                 onclick="{!c.createEditTask}">
                                 {!visitWrapper.task == null ? 'Create' : visitWrapper.reminderDate}
