--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -26,11 +26,11 @@
                         <th>{!$Label.c.Home_Page_StudyVisit_Schedule}</th>
                         <th>{!$Label.c.Home_Page_StudyVisit_WhToEx}</th>
                     </tr>
-                    <aura:iteration var="visit" items="{!v.visitWrappers}">
+                    <aura:iteration var="visitWrapper" items="{!v.visitWrappers}">
                         <tr>
-                            <td>{!visit.name}</td>
-                            <td>{!visit.schedule}</td>
-                            <td><c:RRIconSplitter class="svl-icon" value="{!visit.icons}" numOfIconsToDisplay="3"/></td>
+                            <td>{!visitWrapper.visit.Visit__r.Patient_Portal_Name__c}</td>
+                            <td>{!visitWrapper.visit.Visit_Schedule__c}</td>
+                            <td><c:RRIconSplitter class="svl-icon" value="{!visitWrapper.icons}" numOfIconsToDisplay="3"/></td>
                         </tr>
                     </aura:iteration>
                 </c:RRTable>
