--- a/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
+++ b/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
@@ -17,6 +17,8 @@
     <aura:attribute name="currentScreeningId" type="String" access="private"/>
     <aura:attribute name="participantRecord" type="Participant__c" />
     <aura:attribute name="isShowPopup" type="Boolean" default="false" />
+    <aura:attribute name="peRecord" type="Participant_Enrollment__c" />
+    <aura:attribute name="fieldsComplete" type="Boolean" default="false"/>
 
     <!-- handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -122,9 +124,9 @@
                         </div> -->
                         <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_3-of-12 rp-please-contact">
                             <c:Popup aura:id="popup" title="Edit Patient Information" showModal="{!v.isShowPopup}" size="small">
-                                <c:AddPatientByPI isEditMode="true" participant="{!v.participantRecord}"/>
+                                <c:AddPatientByPI isEditMode="true" participant="{!v.participantRecord}" pe="{!v.peRecord}" isAllRequiredCompleted="{!v.fieldsComplete}"/>
                                 <aura:set attribute="footerButtons">
-                                    <button class="apollo-btn primary" onclick="{!c.updateParticipant}">Save Changes</button>
+                                    <button class="apollo-btn primary" disabled="{!!v.fieldsComplete}" onclick="{!c.updateParticipant}">Save Changes</button>
                                 </aura:set>
                             </c:Popup>
                         </div>
