--- a/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
+++ b/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
@@ -23,6 +23,15 @@
                     </div>
                 </div>
                 <div class="vpi-field">
+                    <div class="label">{!$Label.c.PE_Study_Site_Referred_To}</div>
+                    <!--<div class="value">
+                        <c:RRLink label="{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c}"
+                                  page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c}"
+                                  maxWidth="250px"/>
+                    </div>-->
+                    <div class="value">{!v.pe.Study_Site__r.Name}</div>
+                </div>
+                <div class="vpi-field">
                     <div class="label">{!$Label.c.PE_Referring_provider}</div>
                     <div class="value">
                         <aura:if isTrue="{!!empty(v.pe.HCP__c)}">
@@ -38,10 +47,10 @@
                     <div class="value">{!v.pe.Name}</div>
                 </div>
 
-                <div class="vpi-field">
+                <!--<div class="vpi-field">
                     <div class="label">{!$Label.c.PE_Investigator_Recruitment_Expert}</div>
                     <div class="value">{!v.pe.Study_Site__r.Principal_Investigator__r.Name}</div>
-                </div>
+                </div>-->
 
                 <div class="vpi-field">
                     <div class="label">{!$Label.c.PE_Referred_Date}</div>
@@ -49,10 +58,10 @@
                 </div>
 
                 <aura:if isTrue="{!v.pe.Participant__c}">
-                    <div class="vpi-field">
+                    <!--<div class="vpi-field">
                         <div class="label">{!$Label.c.PE_Patient_Id}</div>
                         <div class="value">{!v.pe.Patient_ID__c}</div>
-                    </div>
+                    </div>-->
                     <div class="vpi-field">
                         <div class="label">{!$Label.c.PE_Patient_Phone_number}</div>
                         <div class="value">{!v.pe.Participant__r.Phone__c}</div>
