--- a/force-app/main/default/aura/ReferralProfile/ReferralProfile.css
+++ b/force-app/main/default/aura/ReferralProfile/ReferralProfile.css
@@ -207,3 +207,45 @@
 .THIS .rp-please-contact{
     font-size: 12px;
 }
+
+.THIS .rp-gray-container{
+    background-color: #F2F2F2;
+    margin-top: 1%;
+    padding-bottom: 1%;
+}
+
+.THIS .rp-info-headers {
+    height: 24px;
+    color: #000000;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px;
+    margin-bottom:5px;
+    vertical-align: top;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.THIS .edit-referral-details{
+    color: #297DFD;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    font-weight: 500;
+    text-align: right;
+    padding:1% 1.5% 0 0;
+    cursor: pointer;
+}
+
+.THIS .rp-info-text{
+    color: #333333;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    padding-left: 2%;
+    min-width: 200px;
+}
+
+.THIS .rp-info-text:last-child{
+    padding-top: 2%;
+}
