fix long values in visit results

--- a/force-app/main/default/aura/RRSlider/RRSlider.css
+++ b/force-app/main/default/aura/RRSlider/RRSlider.css
@@ -20,6 +20,8 @@
     position: absolute;
     margin: 0 0 5px 10px;
     z-index: 1000;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 .THIS .rr-slider-bar {
