--- a/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
+++ b/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
@@ -163,7 +163,7 @@
                         </div>
                         <div class="rr-form-element slds-col">
                             <div class="label">{!$Label.c.MRN_Internal_Id}</div>
-                            <lightning:input type="text" value="{!v.pe.MRN_Id__c}"/>
+                            <lightning:input type="text" value="{!v.pe.MRN_Id__c}" onblur="{!c.doCheckFields}"/>
                         </div>
                     </div>
                 </div>
