--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.css
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.css
@@ -10,7 +10,7 @@
 }
 
 .THIS .mrc-invite-btn-container{
-    text-align: right;
+    text-align: left;
 }
 @media all and (max-width: 767px) {
     .THIS .mrc-invite-btn-container{
