--- a/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
+++ b/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
@@ -13,3 +13,13 @@
 .THIS .fp-filters-container{
     width: 100%;
 }
+
+.THIS .fp-ss-filter-container{
+    max-width: 120px;
+}
+
+@media (max-width: 341px)  {
+    .THIS .fp-ss-filter-container{
+        max-width: 150px;
+    }
+}
