--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
@@ -41,13 +41,13 @@
                     <c:RRNPathItem label="{!$Label.c.PG_SP_L_My_Referring_Providers}"/>
                 </c:RRNavigationPath>
                 <div class="rr-summary-panel slds-grid slds-wrap slds-grid_vertical-stretch slds-gutters_medium">
-                    <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12" style="display: flex">
+                    <!--<div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12" style="display: flex">
                         <c:rrFilterPill number="{!v.filterInfo.value}" title="{!v.filterInfo.label}"
                                         isActive="{!v.filterInfo.isActive}"/>
                     </div>
                     <div class="slds-col slds-size_1-of-1 slds-medium-size_6-of-12">
                         <c:rrSummaryPill summaryContainerList="{!v.summaryContainers}"/>
-                    </div>
+                    </div>-->
                     <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12 mrc-invite-btn-container">
                         <button class="apollo-btn primary mrc-invite-btn" onclick="{!c.doShowInviteRP}">
                             {!$Label.c.PG_MRC_BTN_Invite_Referring_Provider}
