--- a/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
+++ b/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.cmp
@@ -33,14 +33,16 @@
                 </div>
                 <div class="vpi-field">
                     <div class="label">{!$Label.c.PE_Referring_provider}</div>
-                    <div class="value">
+                    <div class="value">{!v.pe.HCP__r.HCP_Contact__r.Name}</div>
+                   <!-- <div class="value"><div class="rp-max-length">{!v.pe.HCP__r.HCP_Contact__r.Name}</div></div>-->
+                   <!-- <div class="value">
                         <aura:if isTrue="{!!empty(v.pe.HCP__c)}">
                             <c:RRLink label="{!v.pe.HCP__r.HCP_Contact__r.Name}"
                                       page="{!'clinic-profile?id=' + v.pe.HCP__r.HCP_Contact__r.AccountId}"
                                       maxWidth="250px"/>
                             <aura:set attribute="else">{!v.pe.Referral_Source__c}</aura:set>
                         </aura:if>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="vpi-field">
                     <div class="label">{!$Label.c.PE_Referral_Id}</div>
