--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
@@ -51,6 +51,13 @@
     margin: 0 5px;
 }
 
+.THIS .visit-result-measurement {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 700;
+}
+
 .THIS .hidden {
     display: none;
 }
