--- a/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
+++ b/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
@@ -43,7 +43,7 @@
                     </tr>
                     <aura:iteration var="visitWrapper" items="{!v.currentVisits}">
                         <tr>
-                            <td class="sv-t-name">{!visitWrapper.visit.Visit__r.Patient_Portal_Name__c}</td>
+                            <td class="sv-t-name">{!(visitWrapper.visit.Is_Adhoc__c ? visitWrapper.visit.Name : visitWrapper.visit.Visit__r.Patient_Portal_Name__c)}</td>
                             <td class="sv-t-time">{!visitWrapper.visit.Visit_Schedule__c}</td>
                             <td class="{!visitWrapper.visit.Is_Adhoc__c ? 'invisible' : 'sv-t-icons'}">
                                 <c:RRIconSplitter numOfIconsToDisplay="5" class="svl-icon"
