PEH-850 trim visit result's min, max and actual values

--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.css
@@ -41,7 +41,10 @@
     line-height: 16px;
     position: absolute;
     bottom: 5px;
-    margin-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 65%;
+    white-space: nowrap;
 }
 
 .THIS .visit-result-item-description {
